--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{ /*this custom classes will add to tailwind utility classes*/
+  .section-min-height{
+    
+  }
+
+}
